--- a/res/layout/fragment_two.xml
+++ b/res/layout/fragment_two.xml
@@ -14,6 +14,11 @@
         <requestFocus />
     </EditText>
 
+    <SurfaceView
+        android:id="@+id/surfaceView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
